--- a/web.html
+++ b/web.html
@@ -8,6 +8,9 @@
             <h1>
                 hola queridos amigos bienvenidos a este gran proyecto.
             </h1>
+            <h2>
+                les recomiendo tomar el curso de git y github de Platzi
+            </h2>
         </div>
     </body>
 </html>
